--- a/index.html
+++ b/index.html
@@ -2,9 +2,281 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colmar Academy</title>
+    <script src="https://use.fontawesome.com/e9691a0c41.js"></script>
+    <link rel="stylesheet" href="font-awesome.min.css">
+    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/media.css" type="text/css">
   </head>
   <body>
+    <div class="outer">
+      <div class="inner">
+        <!-- HEADER START -->
+        <div class="header">
+          <div class="container16">
+            <div class="header-content">
+              <div class="header-left">
+                <div class="logo">
+                <img src="./resources/images/ic-logo.svg" alt="" >
+              </div>
+              <p class="title"><span class="title-bold">COLMAR</span> ACADEMY</p>
+            </div>
+            <div class="header-right">
+              <span class="nav-item">On campus</span><span class="icon"><i class="fa fa-book" aria-hidden="true"></i></span>
+              <span class="nav-item">Online</span>
+              <span class="icon"><i class="fa fa-desktop" aria-hidden="true"></i></span>
+              <span class="nav-item">For companies</span>
+              <span class="icon"><i class="fa fa-user" aria-hidden="true"></i></span>
+              <span class="nav-item">Sign in</span>
+            </div>
+            </div>
+          </div>
+        </div>
+        <!-- HEADER END -->
 
+        <!-- SECTION 1 START-->
+        <div class="hero-1">
+          <div class="content-1">
+              <div class="image-1">
+                <img src="./resources/images/banner.jpg" width="100%" height="100%" alt="">
+              </div>
+              <div class="container24">
+                <div class="hero-text">
+                  <p class="hero-head">Learn something<br/> new everyday</p>
+                  <p class="hero-sub">Lorem ipsum dolor sit amet,<br/>consectetur adipiscing elit.</p>
+                </div>
+                <button type="button" name="button">Start here</button>
+            </div>
+          </div>
+        </div>
+        <!-- SECTION 1 END -->
+        <!-- SECTION 2 START-->
+        <div class="hero-2">
+          <div class="content-2">
+            <div class="left-2">
+              <div class="image-2">
+                <img src="./resources/images/information-main.jpg" width="100%" height="100%" alt="">
+              </div>
+                <div class="hero-text-2">
+                  <p class="hero-head-2">It doesn't hurt to keep practicing</p>
+                  <p class="hero-sub-2">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+                  <p class="credit">Emanuel, Sr Strategist at Hiring.com</p>
+                </div>
+              </div>
+
+              <div class="right-2">
+                <div class="tile">
+                  <div class="tile-image">
+                    <img src="./resources/images/information-orientation.jpg" width="100%" height="100%" alt="">
+                  </div>
+                  <div class="tile-right">
+                  <p class="tile-head">Orientation date</p>
+                  <p class="tile-sub">Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                  <a href="#">Read more</a>
+                  </div>
+                </div>
+
+
+                  <div class="tile-mobile">
+                    <div class="tile-image">
+                      <img src="./resources/images/information-orientation-mobile.jpg" width="100%" height="100%" alt="">
+                    </div>
+                    <div class="tile-right">
+                    <p class="tile-head">Orientation date</p>
+                    <p class="tile-sub">Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                    <a href="#">Read more</a>
+                    </div>
+                  </div>
+
+                <div class="tile">
+                  <div class="tile-image">
+                    <img src="./resources/images/information-campus.jpg" width="100%" height="100%" alt="">
+                  </div>
+                  <div class="tile-right">
+                  <p class="tile-head">Our campus</p>
+                  <p class="tile-sub">Find which campus is close by you</p>
+                  <a href="#">Read more</a>
+                  </div>
+                </div>
+
+                <div class="tile-mobile">
+                  <div class="tile-image">
+                    <img src="./resources/images/information-campus-mobile.jpg" width="100%" height="100%" alt="">
+                  </div>
+                  <div class="tile-right">
+                  <p class="tile-head">Our campus</p>
+                  <p class="tile-sub">Find which campus is close by you</p>
+                  <a href="#">Read more</a>
+                  </div>
+                </div>
+
+                <div class="tile tile-3">
+                  <div class="tile-image">
+                    <img src="./resources/images/information-guest-lecture.jpg" width="100%" height="100%" alt="">
+                  </div>
+                  <div class="tile-right">
+                  <p class="tile-head">Our guest lecture</p>
+                  <p class="tile-sub">Join a keynote with Oliver Slack<br/> about music in medical treatment</p>
+                  <a href="#">Read more</a>
+                  </div>
+                </div>
+
+                <div class="tile-mobile tile-3">
+                  <div class="tile-image">
+                    <img src="./resources/images/information-guest-lecture-mobile.jpg" width="100%" height="100%" alt="">
+                  </div>
+                  <div class="tile-right">
+                  <p class="tile-head">Our guest lecture</p>
+                  <p class="tile-sub">Join a keynote with Oliver Slack<br/> about music in medical treatment</p>
+                  <a href="#">Read more</a>
+                  </div>
+                </div>
+
+              </div>
+          </div>
+        </div>
+        <!-- SECTION 2 END -->
+        <!-- SECTION 3 START -->
+        <div class="hero-3">
+          <div class="content-3">
+            <p class="hero-head">Start learning</p>
+            <div class="card-container">
+              <!-- MOBILE CARDS START -->
+              <div class="mobile-card">
+                <p class="mobile-card-title">Software engineering</p>
+              </div>
+              <div class="mobile-card">
+                <p class="mobile-card-title">Computer art</p>
+              </div>
+              <div class="mobile-card">
+                <p class="mobile-card-title">Design</p>
+              </div>
+              <div class="mobile-card">
+                <p class="mobile-card-title">Data</p>
+              </div>
+              <div class="mobile-card">
+                <p class="mobile-card-title">Business</p>
+              </div>
+              <div class="mobile-card">
+                <p class="mobile-card-title">Marketing</p>
+              </div>
+              <!-- MOBILE CARDS END -->
+              <div class="card">
+                <div class="card-image">
+                  <img src="./resources/images/course-software.jpg" width="100%" height="100%" alt="">
+                </div>
+                <div class="card-text">
+                  <p class="card-head">Software engineering</p>
+                  <p class="card-sub">COURSES</p>
+                  <p class="card-description">Web Development, Mobile Development,<br/> iOT, APIs</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-image">
+                  <img src="./resources/images/course-computer-art.jpg" width="100%" height="100%" alt="">
+                </div>
+                <div class="card-text">
+                  <p class="card-head">Computer art</p>
+                  <p class="card-sub">COURSES</p>
+                  <p class="card-description">Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-image">
+                  <img src="./resources/images/course-design.jpg" width="100%" height="100%" alt="">
+                </div>
+                <div class="card-text">
+                  <p class="card-head">Design</p>
+                  <p class="card-sub">COURSES</p>
+                  <p class="card-description">User Experience Design, User Research, Visual Design</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-image">
+                  <img src="./resources/images/course-data.jpg" width="100%" height="100%" alt="">
+                </div>
+                <div class="card-text">
+                  <p class="card-head">Data</p>
+                  <p class="card-sub">COURSES</p>
+                  <p class="card-description">Data Science, Big Data, SQL,<br/> Data Visualization</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-image">
+                  <img src="./resources/images/course-business.jpg" width="100%" height="100%" alt="">
+                </div>
+                <div class="card-text">
+                  <p class="card-head">Business</p>
+                  <p class="card-sub">COURSES</p>
+                  <p class="card-description">Product Development, Business Development, Startup</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-image">
+                  <img src="./resources/images/course-software.jpg" width="100%" height="100%" alt="">
+                </div>
+                <div class="card-text">
+                  <p class="card-head">Marketing</p>
+                  <p class="card-sub">COURSES</p>
+                  <p class="card-description">Analytics, Content Marketing,<br/> Mobile Marketing</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- SECTION 3 END -->
+        <!-- SECTION 4 START-->
+        <div class="hero-2">
+          <p class="hero-head-3">Thesis exhibits</p>
+          <div class="content-2">
+            <div class="left">
+              <div class="video">
+                <video src="./resources/videos/thesis.mp4" width="100%" height="100%" autoplay></video>
+              </div>
+                <div class="hero-text-2">
+                  <p class="hero-head-2">Reimagine urban</p>
+                  <p class="hero-sub-2">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+                </div>
+              </div>
+
+              <div class="right">
+                <div class="tile nobord tile-3">
+                  <div class="tile-image">
+                    <img src="./resources/images/thesis-fisma.jpg" width="100%" height="100%" alt="">
+                  </div>
+                  <div class="tile-right">
+                  <p class="tile-head">Fisma: Design and Prototype</p>
+                  <p class="tile-sub">Designer showcase of new prototype product</p>
+                  </div>
+                </div>
+
+                <div class="tile nobord">
+                  <div class="tile-image">
+                    <img src="./resources/images/thesis-now-and-then.jpg" width="88%" height="100%" alt="">
+                  </div>
+                  <div class="tile-right">
+                  <p class="tile-head">Now and then</p>
+                  <p class="tile-sub">Research study about New York</p>
+                  </div>
+                </div>
+          <!-- SECTION 4 END -->
+    </div>
+  </div>
+</div>
+    <!-- FOOTER -->
+    <div class="footer">
+      <div class="container">
+        <div class="left-foot">
+          <p class="foot-text">&copy; 2017 Colmar Academy. All rights reserved.</p>
+        </div>
+        <div class="right-foot">
+          <p class="foot-text terms">Terms</p>
+          <p class="foot-text">Privacy</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   </body>
 </html>
